[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flux-plato-bridge"
version = "1.0.0"
description = "Cocapn Fleet module — flux-plato-bridge"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["cocapn", "fleet"]

[project.scripts]
flux_plato_bridge = "bridge:main"
